// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A FieldToggleSwitch 1`] = `
.c6 {
  -webkit-transition: 300ms;
  transition: 300ms;
  position: absolute;
  bottom: 0.125rem;
  left: 0.125rem;
  width: 1rem;
  height: 1rem;
  border-radius: 50%;
  background: #FFFFFF;
}

.c5 {
  -webkit-transition: 300ms;
  transition: 300ms;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  border-radius: 1.25rem;
  background: #C1C6CC;
}

.c4 {
  width: 2.1875rem;
  height: 1.25rem;
  display: inline-block;
  position: relative;
  vertical-align: middle;
}

.c4 input {
  cursor: pointer;
  opacity: 0;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  z-index: 1;
}

.c4 input:focus + div {
  box-shadow: 0 0 0 0.2rem rgba(79,42,186,0.4);
}

.c2 {
  color: #343C42;
  font-size: 0.75rem;
  font-weight: 600;
  display: inline-block;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: grid;
  grid-template-areas: 'input label' '. messages';
  grid-template-columns: repeat(3,max-content);
}

.c0 .c3 {
  grid-area: input;
}

.c0 .c1 {
  font-size: 0.875rem;
  font-weight: normal;
  grid-area: label;
  padding-left: 0.5rem;
}

.c0 .c7 {
  grid-area: messages;
  padding-left: 0.75rem;
}

<label
  className="c0 "
>
  <span
    className="c1 c2"
    color="palette.charcoal700"
    fontSize="xsmall"
    fontWeight="semiBold"
  >
    👍
  </span>
  <div
    className="c3 "
  >
    <div
      className="c4 "
    >
      <input
        aria-describedby="FieldToggleSwitchID-describedby"
        id="FieldToggleSwitchID"
        role="switch"
        type="checkbox"
      />
      <div
        className="c5"
      >
        <div
          className="c6"
          size={20}
        />
      </div>
    </div>
  </div>
  <div
    className="c7 "
    id="FieldToggleSwitchID-describedby"
  />
</label>
`;

exports[`A FieldToggleSwitch turned on 1`] = `
.c6 {
  -webkit-transform: translateX(0.9375rem);
  -ms-transform: translateX(0.9375rem);
  transform: translateX(0.9375rem);
  -webkit-transition: 300ms;
  transition: 300ms;
  position: absolute;
  bottom: 0.125rem;
  left: 0.125rem;
  width: 1rem;
  height: 1rem;
  border-radius: 50%;
  background: #FFFFFF;
}

.c5 {
  -webkit-transition: 300ms;
  transition: 300ms;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  border-radius: 1.25rem;
  background: #6C43E0;
}

.c4 {
  width: 2.1875rem;
  height: 1.25rem;
  display: inline-block;
  position: relative;
  vertical-align: middle;
}

.c4 input {
  cursor: pointer;
  opacity: 0;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  z-index: 1;
}

.c4 input:focus + div {
  box-shadow: 0 0 0 0.2rem rgba(79,42,186,0.4);
}

.c2 {
  color: #343C42;
  font-size: 0.75rem;
  font-weight: 600;
  display: inline-block;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: grid;
  grid-template-areas: 'input label' '. messages';
  grid-template-columns: repeat(3,max-content);
}

.c0 .c3 {
  grid-area: input;
}

.c0 .c1 {
  font-size: 0.875rem;
  font-weight: normal;
  grid-area: label;
  padding-left: 0.5rem;
}

.c0 .c7 {
  grid-area: messages;
  padding-left: 0.75rem;
}

<label
  className="c0 "
>
  <span
    className="c1 c2"
    color="palette.charcoal700"
    fontSize="xsmall"
    fontWeight="semiBold"
  >
    👍
  </span>
  <div
    className="c3 "
  >
    <div
      className="c4 "
    >
      <input
        aria-checked={true}
        aria-describedby="FieldToggleSwitchID-describedby"
        checked={true}
        id="FieldToggleSwitchID"
        role="switch"
        type="checkbox"
      />
      <div
        className="c5"
      >
        <div
          className="c6"
          on={true}
          size={20}
        />
      </div>
    </div>
  </div>
  <div
    className="c7 "
    id="FieldToggleSwitchID-describedby"
  />
</label>
`;
